# permissions_system_example

./: README.md  alembic.ini  pyproject.toml
ra_graphql/: .env  application.py  main.py  manage.py
ra_graphql/core/: config.py  jwt.py
ra_graphql/crud/: author.py  group.py  permission.py  resource.py  token.py  user.py
ra_graphql/migrations/: env.py
ra_graphql/migrations/versions/: 4f8022b8b988_tokens.py  93e6b002ccec_init.py
ra_graphql/models/: Article.py  Author.py  Reader.py
ra_graphql/resolvers/: __init__.py  auth.py  author.py  group.py  permission.py  resource.py  user.py
ra_graphql/schemas/: Auth.graphql  Author.graphql  Group.graphql  Mutation.graphql  Permission.graphql  Query.graphql  Resource.graphql  User.graphql
ra_graphql/utils/: app_event_funcs.py  directives.py  funcs.py
tests/: test_ra_graphql.py
